--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,16 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# IDEs & editors
+*~
+*.swp
+.idea/
+.vscode/
+
+# IPython files
+history.sqlite
+db
+
+# IPython/Jupyter Notebooks
+.ipynb_checkpoints
