--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,6 +5,11 @@ resources:
       name: NSLS-II/profile-collection-ci
       ref: refs/heads/collection-2021-1.0
       endpoint: github
+    - repository: templates
+      type: github
+      name: NSLS-II/profile-collection-ci
+      ref: refs/heads/collection-2019-3.0.1
+      endpoint: github
 
 jobs:
 - template: azure-linux.yml@templates  # Template reference
