Test Azure steps

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,20 +1,15 @@
 resources:
   repositories:
-    - repository: templates-2019-3.0.1
+    - repository: templates
       type: github
       name: NSLS-II/profile-collection-ci
-      ref: refs/heads/collection-2019-3.0.1
-      endpoint: github
-    - repository: templates-2021-1.0
-      type: github
-      name: NSLS-II/profile-collection-ci
-      ref: refs/heads/collection-2021-1.0
+      ref: refs/heads/main
       endpoint: github
 
 jobs:
-  - template: azure-linux.yml@templates-2019-3.0.1
+  - template: collection-2019-3.0.1.yml@templates
     parameters:
       beamline_acronym: NYX
-  - template: azure-linux.yml@templates-2021-1.0
+  - template: collection-2021-1.0.yml@templates
     parameters:
       beamline_acronym: NYX
