--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,9 +7,12 @@ resources:
       endpoint: github
 
 jobs:
-  - template: collection-2019-3.0.1.yml@templates
+  - template: collection-2021-1.0.yml@templates
     parameters:
       beamline_acronym: NYX
-  - template: collection-2021-1.0.yml@templates
+  - template: nsls2-collection-2021-3.0-py37.yml@templates
+    parameters:
+      beamline_acronym: NYX
+  - template: nsls2-collection-2021-3.0-py39.yml@templates
     parameters:
       beamline_acronym: NYX
